syntax = "proto3";

import "google/protobuf/empty.proto";

package ipc;
option go_package = "github.com/livekit/ingress/pkg/ipc";

service IngressHandler {
  rpc GetPProf(PProfRequest) returns (PProfResponse) {};
  rpc UpdateMediaStats(UpdateMediaStatsRequest) returns (google.protobuf.Empty) {};
}

message PProfRequest {
  string profile_name = 1;
  int32 timeout = 2;
  int32 debug = 3;
}

message PProfResponse {
  bytes pprof_file = 1;
}

message UpdateMediaStatsRequest {
  optional int32 audio_averate_bitrate = 1;
  optional int32 audio_current_bitrate = 2;
  optional int32 video_averate_bitrate = 3;
  optional int32 video_current_bitrate = 4;
}
